# axtp

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  FAQ.md  KICKOFF.md  README.md  ROADMAP.md  chatgpt方案.md  codex-review.md  codex审查计划.md  coding-guide.md  doc-refactor.md  ds-jsonrpc.md  gemini方案.md  generator-spec.md  logic-server.md  review-claude.md
.claude/skills/: axtp-add-domain.md  axtp-patterns.md
.github/workflows/: notify-runtimes.yml  validate-conformance.yml
conformance/: README.md
docs/: README.md
docs/architecture/: README.md  domain-feature-classification.md  protocol-lifecycle-boundaries.md
docs/business/: README.md  device-firmware-update.md  device-system-info.md
docs/conformance/: README.md  manifest.yaml
docs/demo/: 19-AXTP-OTA-Stream-Demo.md  21-AXTP-Cpp-Demo实现规范.md  (+2 more)
generators/: README.md  package.json
protocol/: axtp.protocol.yaml
protocol-source/: AXTP-Legacy-Registry-Migration-Map.md  AXTP-Protocol-Full-Reference.md  AXTP-Protocol-Plan.md
registry/: display_schema.yaml  rpc_body_encoding.yaml
release/: manifest.template.yaml
runtimes/: README.md
runtimes/cpp/sdk/: CMakeLists.txt
runtimes/cpp/sdk/include/: axtp_client.hpp  axtp_device.hpp  axtp_sdk_all.hpp  axtp_server.hpp  call_options.hpp  capability_client.hpp  client_options.hpp  endpoints.hpp  event_subscription.hpp  sdk_error.hpp  sdk_result.hpp  stream_client.hpp
runtimes/cpp/sdk/tests/: sdk_smoke_test.cpp
scripts/: build-spec-artifact.sh  check-format-cpp.sh  format-cpp.sh  validate-conformance.mjs  validate-conformance.sh
(+564 files in other folders)
